Fixed overflowing topic text and changed iterator to id

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,6 @@ body {
         padding-top: 60px;
         padding-bottom: 40px;
 }
-.center {
-	text-align: center;
-}
 textarea {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -12,6 +9,12 @@ textarea {
 	width: 100%;
 	height: 200px;
 	resize: none;
+}
+.center {
+	text-align: center;
+}
+.wrap {
+	word-wrap: break-word;
 }
 #debug-toolbar {
     top: auto !important;
